--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "react": "^19.1.0",
