--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -20,14 +21,17 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.8.4",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
+    "graphql": "^16.11.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +60,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "postcss-flexbugs-fixes": "^5.0.2",
